# fmon2

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
components/mlx90640_redar/: CMakeLists.txt  redar_i2c_driver.c
main/: CMakeLists.txt  capture_image.c  capture_image.h  cnn_classifier.cpp  cnn_classifier.h  fmon2.c  https_client.cpp  https_client.h  wifi_manager.c
main/headers/: capture_image.h  wifi_manager.h
main/model/: modelo_int8.h
